# executor

./: .clang-format  BUILD.gn  CMakeLists.txt  README.md
include/: execution.hpp  static_thread_pool.hpp
test/: ExecutionTest.cpp
